CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c.object
<CustomObject>
    <label>RRP Test Kit</label>
    <nameField>
        <label>RRP Test Kit Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RRP Test Kits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>