CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Form__c.field-meta.xml
<CustomField>
    <fullName>Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Form</label>
    <referenceTo>disco__Form__c</referenceTo>
    <relationshipLabel>RRP Test Kits</relationshipLabel>
    <relationshipName>RRP_Test_Kits</relationshipName>
    <type>Lookup</type>
</CustomField>