CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Lead_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Lead_Fee_Amount__c</fullName>
    <label>Lead Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>