CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/MFG__c.field-meta.xml
<CustomField>
    <fullName>MFG__c</fullName>
    <label>MFG</label>
    <length>255</length>
    <type>Text</type>
</CustomField>