CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Test_Location__c.field-meta.xml
<CustomField>
    <fullName>Test_Location__c</fullName>
    <label>Test Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>