CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Unit_Room_Location__c.field-meta.xml
<CustomField>
    <fullName>Unit_Room_Location__c</fullName>
    <label>Unit/Room Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>