CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>RRP Test Kits</relationshipLabel>
    <relationshipName>RRP_Test_Kits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>