CostalCloud/force-app/main/default/objects/RRP_Test_Kits__c/fields/Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order Line Item</label>
    <referenceTo>WorkOrderLineItem</referenceTo>
    <relationshipLabel>RRP Test Kits</relationshipLabel>
    <relationshipName>RRP_Test_Kits</relationshipName>
    <type>Lookup</type>
</CustomField>